template implemented and sale orders started

--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab3)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(lab3 main.cpp p_queue.cpp p_queue.h)
+add_executable(lab3 main.cpp  p_queue.h)
