--- a/lab5/CMakeLists.txt
+++ b/lab5/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab5)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(lab5 main.cpp monitor.cpp monitor.h print.cpp print.h is_greater.cpp is_greater.h)
+add_executable(lab5 main.cpp monitor.cpp monitor.h print.cpp print.h is_greater.cpp is_greater.h bin_op.cpp bin_op.h un_op.cpp un_op.h)
