--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -7,5 +7,5 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lpthread -lX11")
 set(SFML_DIR "libs/SFML-2.5.1/lib/cmake/SFML")
 
 find_package(SFML COMPONENTS graphics  REQUIRED)
-add_executable(project main.cpp renderer.cpp renderer.h)
+add_executable(project main.cpp renderer.cpp renderer.h snake.cpp snake.h)
 target_link_libraries(project sfml-graphics )
